--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "validator": "^13.15.15"
   }
 }
