--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
-    "frontend": "file:",
+    "express": "^4.21.2",
     "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
