--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,8 +20,12 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-list-endpoints": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3",
+    "pdfkit": "^0.17.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15"
