--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,9 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@emailjs/browser": "^4.4.1",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
@@ -27,6 +30,7 @@
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.0.1",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
