--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "ngx-toastr": "^19.0.0",
+    "nodemailer": "^7.0.3",
+    "pdfkit": "^0.17.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15"
