--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
+    "docs": "compodoc -p tsconfig.json -s",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
