--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@emailjs/browser": "^4.4.1",
+    "chart.js": "^4.5.0",
+    "echarts": "^5.6.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "jspdf": "^3.0.1",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
