--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@angular/animations": "^20.0.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.1",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -11,11 +13,15 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "ng2-charts": "^4.1.1",
     "ngx-toastr": "^19.0.0",
     "nodemailer": "^7.0.3",
     "pdfkit": "^0.17.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15"
+  },
+  "devDependencies": {
+    "@types/chart.js": "^2.9.41"
   }
 }
