--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "validator": "^13.15.15"
   },
   "devDependencies": {
-    "@types/chart.js": "^2.9.41"
+    "@types/chart.js": "^2.9.41",
+    "typescript": "~5.2"
   }
 }
