Added custom unit testing for complete login component

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -67,6 +67,8 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
+            "main": "src/test.ts",
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
