--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@emailjs/browser": "^4.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
     "echarts": "^5.6.0",
     "emailjs": "^4.0.3",
