--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -41,6 +41,11 @@
                   "maximumError": "10MB"
                 }
               ],
+              "fileReplacements": [
+                    {
+                      "replace": "src/environments/environment.ts",
+                      "with": "src/environments/environment.prod.ts"
+                    }],
               "outputHashing": "all"
             },
             "development": {
