--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,8 @@
     "docs": "compodoc -p tsconfig.json -s",
     "ng": "ng",
     "start": "ng serve",
+    "start:production": "ng serve --configuration production",
+
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
